{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 1826,
  "lineage": "70c4c796-0a9f-b642-b59a-07c7a6af671e",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nat_ip",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.69.56.23",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-11-04T21:53:35.022-08:00",
            "id": "projects/devsecops-287407/regions/us-central1/addresses/nat-ip",
            "name": "nat-ip",
            "network_tier": "PREMIUM",
            "project": "devsecops-287407",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/regions/us-central1/addresses/nat-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_service",
      "provider": "provider.google"
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080",
                  "8081",
                  "8888"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-11-04T21:53:47.412-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devsecops-287407/global/firewalls/terraform-fw-fw-allow-http",
            "log_config": [],
            "name": "terraform-fw-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/global/networks/terraform-vpc",
            "priority": 1000,
            "project": "devsecops-287407",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/global/firewalls/terraform-fw-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-11-04T21:53:47.342-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devsecops-287407/global/firewalls/terraform-fw-fw-allow-https",
            "log_config": [],
            "name": "terraform-fw-fw-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/global/networks/terraform-vpc",
            "priority": 1000,
            "project": "devsecops-287407",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/global/firewalls/terraform-fw-fw-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-11-04T21:53:47.086-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devsecops-287407/global/firewalls/fw-allow-internal",
            "log_config": [],
            "name": "fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/global/networks/terraform-vpc",
            "priority": 1000,
            "project": "devsecops-287407",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/global/firewalls/fw-allow-internal",
            "source_ranges": [
              "10.10.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-rdp",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-11-04T21:53:47.255-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devsecops-287407/global/firewalls/terraform-fw-fw-allow-rdp",
            "log_config": [],
            "name": "terraform-fw-fw-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/global/networks/terraform-vpc",
            "priority": 1000,
            "project": "devsecops-287407",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/global/firewalls/terraform-fw-fw-allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "rdp"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-11-04T21:53:47.228-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devsecops-287407/global/firewalls/terraform-fw-fw-allow-ssh",
            "log_config": [],
            "name": "terraform-fw-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/global/networks/terraform-vpc",
            "priority": 1000,
            "project": "devsecops-287407",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/global/firewalls/terraform-fw-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": true,
            "allow_global_access": false,
            "backend_service": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/regions/us-central1/backendServices/compute-backend",
            "creation_timestamp": "2020-11-04T21:54:00.426-08:00",
            "id": "projects/devsecops-287407/regions/us-central1/forwardingRules/compute-forwarding-rule",
            "ip_address": "10.10.0.2",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "INTERNAL",
            "name": "compute-forwarding-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/global/networks/terraform-vpc",
            "network_tier": "PREMIUM",
            "project": "devsecops-287407",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/regions/us-central1/forwardingRules/compute-forwarding-rule",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/regions/us-central1/subnetworks/terraform-subnet"
          },
          "dependencies": [
            "google_compute_health_check.hc",
            "google_compute_network.vpc",
            "google_compute_region_backend_service.backend",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "global_forwarding_rule",
      "provider": "provider.google"
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "terraform",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/global/images/terra-image",
                    "size": 3,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/zones/us-central1-c/disks/terra-vm-130d146cdf2bd1f7"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devsecops-287407/zones/us-central1-c/instances/terra-vm-130d146cdf2bd1f7",
            "instance_id": "3591218906507652431",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "uc6YF18GVwo=",
            "metadata_startup_script": "sudo apt-get -y update;sudo apk update; sudo apt-get -y dist-upgrade; sudo apt-get -y install nginx",
            "name": "terra-vm-130d146cdf2bd1f7",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/global/networks/terraform-vpc",
                "network_ip": "10.10.0.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/regions/us-central1/subnetworks/terraform-subnet",
                "subnetwork_project": "devsecops-287407"
              }
            ],
            "project": "devsecops-287407",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/zones/us-central1-c/instances/terra-vm-130d146cdf2bd1f7",
            "tags": [
              "http",
              "https",
              "ssh"
            ],
            "tags_fingerprint": "FeWfR_dobKY=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_image.bootable-image",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/devsecops-287407/global/networks/terraform-vpc",
            "name": "terraform-vpc",
            "project": "devsecops-287407",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/global/networks/terraform-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "backend",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2020-11-04T21:53:36.697-08:00",
            "fingerprint": "KO4ajnECNhg=",
            "health_checks": [
              "projects/devsecops-287407/global/healthChecks/proxy-health-check"
            ],
            "id": "projects/devsecops-287407/regions/us-central1/backendServices/compute-backend",
            "load_balancing_scheme": "INTERNAL",
            "name": "compute-backend",
            "project": "devsecops-287407",
            "protocol": "TCP",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/regions/us-central1/backendServices/compute-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.hc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route-ilb",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/devsecops-287407/global/routes/route-lib",
            "name": "route-lib",
            "network": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/global/networks/terraform-vpc",
            "next_hop_gateway": "",
            "next_hop_ilb": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/regions/us-central1/forwardingRules/compute-forwarding-rule",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "10.10.0.2",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 2000,
            "project": "devsecops-287407",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/global/routes/route-lib",
            "tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_forwarding_rule.default",
            "google_compute_health_check.hc",
            "google_compute_network.vpc",
            "google_compute_region_backend_service.backend",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat-router",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-11-04T21:53:47.210-08:00",
            "id": "projects/devsecops-287407/regions/us-central1/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/global/networks/terraform-vpc",
            "project": "devsecops-287407",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/regions/us-central1/routers/nat-router"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-gateway",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "devsecops-287407/us-central1/nat-router/nat-gateway",
            "min_ports_per_vm": 0,
            "name": "nat-gateway",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/devsecops-287407/regions/us-central1/addresses/nat-ip"
            ],
            "project": "devsecops-287407",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_address.nat_ip",
            "google_compute_network.vpc",
            "google_compute_router.nat-router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider.google-beta",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-11-04T21:53:47.696-08:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/devsecops-287407/regions/us-central1/subnetworks/terraform-subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "terraform-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/global/networks/terraform-vpc",
            "private_ip_google_access": false,
            "project": "devsecops-287407",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devsecops-287407/regions/us-central1/subnetworks/terraform-subnet"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "target_http_proxy",
      "provider": "provider.google"
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider.google",
      "instances": []
    }
  ]
}